--- a/admissions/index.html
+++ b/admissions/index.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
 
-  <title>Our School &vert; Mooltripakdee International School</title>
+  <title>Admissions &vert; Mooltripakdee International School</title>
 
   <!-- cookiebot consent banner -->
   <!-- <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="889c84d8-1246-4048-b06c-b4cb9c1dfef1" type="text/javascript"
@@ -59,9 +59,9 @@
 
   <header class="sub-header-image">
     <figure>
-        <img src="https://res.cloudinary.com/imgursoyjean/image/upload/v1538105409/mis/mis-ourschool/subject-building.jpg" alt="">
+        <img src="../img/admission.jpg" alt="">
       <figcaption class="container">
-        <span class="sub-header-location">Subject Building</span>
+        <span class="sub-header-location">Main Office</span>
       </figcaption>
     </figure>
 
@@ -69,18 +69,32 @@
 
   <main role="main">
     <article class="container">
-      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ex architecto velit aperiam
-        reprehenderit impedit.</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint unde sapiente eius non magnam at reprehenderit
-        perferendis. Necessitatibus officiis qui fugit possimus vel quae facere illo, neque aliquam iste, voluptas,
-        quidem amet. Harum voluptatum adipisci ex veniam facere exercitationem laborum excepturi necessitatibus ut
-        nostrum veritatis dolorum, incidunt aperiam voluptates! Magnam architecto a assumenda vero? Doloremque iste
-        corporis enim earum provident optio mollitia asperiores, dicta reiciendis molestias ipsum. Deserunt, eaque et
-        aperiam tenetur, ut ullam tempora hic voluptatibus sit, laudantium vero accusantium esse rerum? Voluptate ullam
-        id odit possimus, ea soluta officia autem ratione recusandae repellat aperiam, harum delectus porro deleniti.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum hic reiciendis voluptates id fugiat quae omnis
-        sint quis, ullam, recusandae unde iste nulla debitis optio.</p>
-
+      <h1>Admissions Procedure</h1>
+      <p>Generally, we assess children for Admission on an individual case by case basis.For Primary School and Middle School, it may be necessary for children to take a reading and writing test. This is because in primary school children need to have at least a basic English reading and writing ability and at middle school they should have mastered these skills. This will be determined by the class teacher.</p>
+      <p>The English curriculum is quite disciplined and fast moving with strict standards. The mode of teaching and learning is English Language for all curriculum subjects. Apart from the reading and writing test, children may be invited to observe the class for which they wish to enroll. This is so that your child can get a feel for the class and its ability, and for the Class Teacher to make an assessment.</p>
+      <h4>Photo and Document Requirements from New Children</h4>
+      <ul>
+        <li>Four photos (3.5 x 4.5 cm)</li>
+        <li>1 copy of Child’s Passport or Birth Certificate</li>
+        <li>1 copy of House Registration Book (Thai Blue Book)</li>
+        <li>1 copy of Parent’s Passport or ID card</li>
+        <li>1 copy of Vaccine Book or Health Certificate</li>
+        <li>1 copy of previous School Report</li>
+        <li>1 copy of document showing child's previous name (if it has been changed)</li>
+      </ul>
+      <h4>Enrolment Application Form Instructions</h4>
+      <p>Please fill-in the enrollment form and provide all the necessary details. It is essential that we not only have your up-to-date home/mobile telephone number but also an <strong>up-to-date emergency contact number</strong> where we can reach a family member quickly.</p>
+      <p>When you have completed the application form, bring it together with the photo, document requirements and the fees to the school office.</p>
+      <h4>Items for Daily Preschool</h4>
+      <ul>
+        <li>Spare clothes</li>
+        <li>Towel</li>
+        <li>Toothbrush</li>
+        <li>Cap or hat</li>
+        <li>Water Bottle</li>
+      </ul>
+      <hr>
+      <h1>Tuition Fees</h1>
     </article>
 
 
