--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -59,9 +59,9 @@
 
   <header class="sub-header-image">
     <figure>
-        <img src="https://res.cloudinary.com/imgursoyjean/image/upload/v1538105409/mis/mis-ourschool/subject-building.jpg" alt="">
+        <img src="../img/map.jpg" alt="">
       <figcaption class="container">
-        <span class="sub-header-location">Subject Building</span>
+        <span class="sub-header-location">Diorama Map</span>
       </figcaption>
     </figure>
 
