--- a/events/index.html
+++ b/events/index.html
@@ -60,15 +60,18 @@
 
   <header class="sub-header-image">
     <figure>
-        <img src="https://res.cloudinary.com/imgursoyjean/image/upload/v1538105409/mis/mis-ourschool/subject-building.jpg" alt="">
+        <img src="../img/events.jpg" alt="">
       <figcaption class="container">
-        <span class="sub-header-location">Subject Building</span>
+        <span class="sub-header-location">Football Field</span>
       </figcaption>
     </figure>
 
   </header>
 
   <main role="main">
+    <aside class="container">
+
+    </aside>
     <article class="container">
       <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ex architecto velit aperiam
         reprehenderit impedit.</h1>
