--- a/our-school/index.html
+++ b/our-school/index.html
@@ -106,7 +106,8 @@
           MIS secondary school (children aged between 11 and 15 years old) will be a continuation of the English
           National
           Curriculum taught by qualified subject teachers.</p>
-        <p>Set in beautiful grounds, <span class="tooltip-text" title="Mooltripakdee International School">MIS</span> is located on a quiet and peaceful site in the countryside just a few
+        <p>Set in beautiful grounds, <span class="tooltip-text" title="Mooltripakdee International School">MIS</span>
+          is located on a quiet and peaceful site in the countryside just a few
           kilometers
           away from central Pattaya along the Chaiyapornvitee Road near Mabprachan Lake</p>
         Sincerely<br>
@@ -130,6 +131,67 @@
         <p>Presently, the school has over 600 students. Our student population is made up of children from several
           countries. We anticipate that our student numbers will increase to around 700 for next school year beginning
           August 2018.</p>
+        <h4>MIS Teachers</h4>
+        <ul>
+          <li>Act as role models, developing good relationships between Pupils, Parents and their Teaching Teams.</li>
+          <li>Nurture the values of respect, politeness and integrity.</li>
+          <li>Value each child as a unique person.</li>
+        </ul>
+        <p>There are a variety of Teachers at MIS. The Class Teachers takes responsibility for their class on a daily
+          basis, planning and preparing work according to the curriculum objectives.</p>
+        <p>Each primary class has one International Teacher and two Assistant Teachers. Of the two Assistant Teachers,
+          at least one is capable of taking and managing the class themselves. All lessons are taught in English.</p>
+        <p>The Preschool and Kindergarten has a Coordinator overseeing all the classes. The Primary School has a
+          Coordinator for Key Stage 1 and for Key Stage 2. The Secondary School has Subject Leaders for the 4 main
+          subject areas and Senior management oversees the whole School to ensure consistency, cohesion and smooth
+          transitions from year to year.</p>
+        <p>The Principal monitors the Academic progress throughout the School as well as undertaking administrative and
+          other associated tasks.</p>
+        <hr>
+        <h2>General School Information</h2>
+        <h4>Uniform</h4>
+        <p>The School Policy on School uniform is as follows:</p>
+        <ul>
+          <li><strong>Monday, Tuesday, Wednesday & Friday:</strong>&nbsp;School uniform must be worn.</li>
+          <li><strong>Thursday:</strong>&nbsp; Children can wear clothes of their own choosing, or if they prefer,
+            Traditional Thai clothing or some other International Costume.</li>
+          <li><strong>Sports uniform:</strong>&nbsp;Depending on the class time-table.</li>
+          <li><strong>Hair and Accessories:</strong>&nbsp;Long hair needs to be tied up at all times and accessories
+            need to be in School colours: black, white or green.</li>
+          <li><strong>Shoes:</strong>&nbsp;Closed shoes are to be worn at all times for protection. Black shoes are
+            preferred.</li>
+        </ul>
+        <h4>Hat Policy</h4>
+        <p>Children are expected to wear hats for all outdoor activities, especially during break and lunch-time. Since
+          exposure to the sun can cause sunstroke and a feeling of sleepiness, wearing a hat when outside is very
+          important. This is a policy that is adopted by most other International Schools in Thailand. Secondary School
+          students are not required to wear hats during sporting activities.</p>
+        <h4>Back Packs</h4>
+        <p>Please ensure your child has a back pack, and the he/she brings it to school each day. Back packs help us
+          organise the child's clothing and other items such as: toothbrush/toothpaste, swimming gear, towels, memos
+          and notes that we will be sending home on a regular basis. Please check the contents of your child's back
+          pack daily.</p>
+        <h4>Collection of Children from School</h4>
+        <p>Please inform use if anyone different is collecting your child from school. We will ensure that all staff
+          are aware of this. Also. please pick up your child on time, as we have no babysitters or child minders to
+          care for the children after hours.</p>
+        <h4>Sickness or Accident at School</h4>
+        <p>If your child becomes unwell at school and is upset or not able to cope with lessons, we will contact you
+          and ask you to come and collect him/her. Children are best kept at home until they are quite well enough to
+          return to school. To avoid the spread of illness, please keep your child at home at least 48 hours following
+          sickness and diarrhea. If your child has an infectious or contagious diseases it is important that the school
+          is informed and a doctor’s clearance obtained before returning to school.</p>
+        <blockquote class="blockquote">
+          <em><strong>It is essential that we have your up-to-date home/mobile telephone number
+          and also an emergency contact number where we can reach a family member quickly.</strong></em>
+        </blockquote>
+        <p>We will inform you if your child has had more than a bump or scrape at school. Small children do have a tendency to have accidents in school and if this results in your child requiring hospital treatment, we will not hesitate to inform you and seek proper care for your child. We will consult your child’s individual emergency information, and you will be contacted. If necessary, your child may be taken to the hospital indicated on the emergency sheet, and you will be expected to meet us there. The <strong>Parental Consent Form</strong> will accompany your child so that immediate treatment may be given. It is very important that you keep these details up to date. The closest hospital to our school is the <strong>Bangkok Pattaya Hospital</strong>. The contribution of the school is the maximum amount of <strong>&#3647;10,000</strong> per visit.</p>
+        <h4>School Meals</h4>
+        <p>School Meals are served in the dining room under the supervision of teaching assistants. We serve a variety of hot food daily. Hot school meals are changed on a termly basis (see <a href="#">fees</a>).</p>
+        <h4>Packed Lunches</h4>
+        <p>If your child does not participate in our paid school lunch program, then lunches should be sent to school in a suitable strong container with your child’s name and class clearly marked on the front. Please consider a cooling device inside, like a frozen drink and/or a cool box to protect your child’s food from heat.</p>
+        <h4>Snack Time During Break</h4>
+        <p>This is a relaxing time for your child to enjoy a drink of milk or water and a biscuit provided by the school.</p>
       </section>
     </article>
 
