--- a/our-team/index.html
+++ b/our-team/index.html
@@ -59,10 +59,10 @@
 
   <header class="sub-header-image">
     <figure>
-      <img src="https://res.cloudinary.com/imgursoyjean/image/upload/v1538105409/mis/mis-ourschool/subject-building.jpg"
+      <img src="../img/team.jpg"
         alt="">
       <figcaption class="container">
-        <span class="sub-header-location">Subject Building</span>
+        <span class="sub-header-location">MIS Team - Main Office</span>
       </figcaption>
     </figure>
 
