--- a/our-school/index.html
+++ b/our-school/index.html
@@ -122,10 +122,10 @@
           and
           designed by Ms Wiravan Mooltripakdee (Ms Wee). Her vision was to build on the success of our then sister
           school
-          - MCCI, a Montessori school, located at Naklua Soi 16 - by offering primary school education in addition to
-          Preschool and kindergarten. Unfortunately in July 2011, after twenty-two years operating as a school, MCCI
+          - <span class="tooltip-text" title="Mooltripakdee Children's Centre International">MCCI</span>, a Montessori school, located at Naklua Soi 16 - by offering primary school education in addition to
+          Preschool and kindergarten. Unfortunately in July 2011, after twenty-two years operating as a school, <span class="tooltip-text" title="Mooltripakdee Children's Centre International">MCCI</span>
           had
-          to close due to the lease on the land expiring. MCCI teachers and the remaining students amalgamated with MIS
+          to close due to the lease on the land expiring. <span class="tooltip-text" title="Mooltripakdee Children's Centre International">MCCI</span> teachers and the remaining students amalgamated with MIS
           in August 2011.</p>
         <h4>The Present and the Future</h4>
         <p>Presently, the school has over 600 students. Our student population is made up of children from several
