--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -57,8 +58,18 @@
 
   <header role="banner">
 
+    <div class="overflow-hidden">
+      <div class="text-overlay text-center">
+        <span id="call-to-action">What makes MIS&nbsp;<strong>Great</strong>&nbsp;?</span>
+      </div>
+      <div class="pattern-overlay"></div>
+      <video id="homepage-video" autoplay loop muted poster="https://res.cloudinary.com/imgursoyjean/image/upload/v1538105409/mis/mis-ourschool/subject-building.jpg">
+        <source src="https://res.cloudinary.com/imgursoyjean/video/upload/v1538467772/mis/mis-homepage/mis-compressed.mp4" type="video/mp4">
+      </video>
+    </div>
+
     <!-- Carousel -->
-    <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
+    <!-- <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
       <div class="carousel-inner">
         <div class="text-overlay text-center">
           <h1>What makes MIS&nbsp;<strong><mark>Great</mark></strong>&nbsp;?</h1>
@@ -87,7 +98,7 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div>
+    </div> -->
     <!-- End of Carousel -->
 
   </header>
@@ -228,7 +239,9 @@
       <div class="carousel-inner">
 
         <div class="carousel-item active">
-          <img class="d-block w-100 showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496792/mis/mis-homepage/girl-reading.jpg"
+          <!-- <img class="d-block w-100 showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496792/mis/mis-homepage/girl-reading.jpg"
+            alt="First slide"> -->
+          <img class="d-block showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496815/mis/mis-homepage/website_01.jpg"
             alt="First slide">
           <div class="carousel-caption d-none d-md-block">
             <div class="text-box">
@@ -240,7 +253,7 @@
         </div>
 
         <div class="carousel-item">
-          <img class="d-block w-100 showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496844/mis/mis-homepage/arial-shot.jpg"
+          <img class="d-block showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496844/mis/mis-homepage/arial-shot.jpg"
             alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
             <div class="text-box">
@@ -252,7 +265,7 @@
         </div>
 
         <div class="carousel-item">
-          <img class="d-block w-100 showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-homepage/pool.jpg"
+          <img class="d-block showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-homepage/pool.jpg"
             alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
             <div class="text-box">
@@ -264,7 +277,7 @@
         </div>
 
         <div class="carousel-item">
-          <img class="d-block w-100 showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496801/mis/mis-homepage/building.jpg"
+          <img class="d-block showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496801/mis/mis-homepage/building.jpg"
             alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
             <div class="text-box">
@@ -276,7 +289,7 @@
         </div>
 
         <div class="carousel-item">
-          <img class="d-block w-100 showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496826/mis/mis-homepage/reading.jpg"
+          <img class="d-block showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496826/mis/mis-homepage/reading.jpg"
             alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
             <div class="text-box">
@@ -457,10 +470,9 @@
 
   <!-- Optional JavaScript -->
   <script>
-    $('#header-carousel').carousel({
+    $('#showcase').carousel({
       interval: 5000
     });
-    $('#showcase').carousel();
   </script>
 
   <!-- <script id="CookieDeclaration" src="https://consent.cookiebot.com/889c84d8-1246-4048-b06c-b4cb9c1dfef1/cd.js" type="text/javascript"
