--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <nav class="container">
       <div class="fixed-navbar">
         <span>
-          <a href="#">
+          <a href="/">
             <img class="logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-homepage/mis-logo.png"
               alt="">
           </a>
@@ -64,7 +64,8 @@
       </div>
       <div class="pattern-overlay"></div>
       <video id="homepage-video" autoplay loop muted poster="https://res.cloudinary.com/imgursoyjean/image/upload/v1538105409/mis/mis-ourschool/subject-building.jpg">
-        <source src="https://res.cloudinary.com/imgursoyjean/video/upload/v1538467772/mis/mis-homepage/mis-compressed.mp4" type="video/mp4">
+        <source src="https://res.cloudinary.com/imgursoyjean/video/upload/v1538467772/mis/mis-homepage/mis-compressed.mp4"
+          type="video/mp4">
       </video>
     </div>
 
