--- a/our-school/index.html
+++ b/our-school/index.html
@@ -106,6 +106,9 @@
           MIS secondary school (children aged between 11 and 15 years old) will be a continuation of the English
           National
           Curriculum taught by qualified subject teachers.</p>
+        <p>
+          Mooltripakdee International School aims to nurture a happy, safe and welcoming community where children are equipped with positive attitudes, skills and knowledge to enable them to enjoy their childhood and to serve as a foundation for their future development.
+        </p>
         <p>Set in beautiful grounds, <span class="tooltip-text" title="Mooltripakdee International School">MIS</span>
           is located on a quiet and peaceful site in the countryside just a few
           kilometers
