--- a/our-team/index.html
+++ b/our-team/index.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <link rel="stylesheet" href="../assets/css/layout.css">
+  <link rel="stylesheet" href="../assets/css/our-team.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
 
@@ -59,8 +60,7 @@
 
   <header class="sub-header-image">
     <figure>
-      <img src="../img/team.jpg"
-        alt="">
+      <img src="../img/team.jpg" alt="">
       <figcaption class="container">
         <span class="sub-header-location">MIS Team - Main Office</span>
       </figcaption>
@@ -69,6 +69,367 @@
   </header>
 
   <main role="main">
+
+    <!-- Organizational Chart 2018 - 2019 -->
+    <div class="container">
+      <div class="header">
+        <span class="header__title">
+          <span class="header__title--bold">
+            Mooltripakdee International School
+          </span>
+          <span class="header__title--regular">
+            Organizational Chart 2018 - 2019
+          </span>
+        </span>
+
+        <span class="header__text-box">
+          <div class="header__text-box--title">
+            Vision
+          </div>
+          <span class="header__text-box--description">
+            Empower the people to improve lives with dynamic business opportunities and innovative products.
+          </span>
+          <div class="header__text-box--title">
+            Mission
+          </div>
+          <span class="header__text-box--description">
+            Become the world’s leading direct selling company by providing livelihood for sales leaders than any other.
+          </span>
+        </span>
+      </div>
+
+      <div class="orgchart">
+
+        <!-- Main Office -->
+        <div id="manager" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            Owner and Manager
+          </div>
+          <div class="orgchart__textbox--name">
+            Dr Wiravan Mooltripakdee
+          </div>
+        </div>
+
+        <div id="assistant-manager" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            Assistant Manager
+          </div>
+          <div class="orgchart__textbox--name">
+            Dr Nissakorn Phimthong
+          </div>
+        </div>
+
+        <div id="deputy-principal1" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/main office/Rob-Soden.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Rob Soden<br>
+              <span class="info">
+                Vice Principal
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="principal" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/main office/Mark-Grittner.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Mark Grittner<br>
+              <span class="info">
+                School Principal
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="deputy-principal2" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/main office/Matthew-Bolton.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Matthew Bolton<br>
+              <span class="info">
+                Deputy Principal
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="office-administrator" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/main office/Orathai-Moolpia.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Orathai Moolpia<br>
+              <span class="info">
+                Office Administrator
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="accountant1" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/main office/Orawan-Suwannasaeng.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Orawan Suwannasaeng<br>
+              <span class="info">
+                Accountant
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="accounting-head" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/main office/Wimonwan-Teomsab.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Wimonwan Teomsab<br>
+              <span class="info">
+                Accounting Head
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="accountant2" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/main office/Rujirapha-Thongtapthai.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Rujirapha Thongtapthai<br>
+              <span class="info">
+                Accountant
+              </span>
+            </div>
+          </div>
+        </div>
+        <!-- End of Main Office -->
+
+        <!-- EYFS Teachers -->
+        <div class="teaching-staff">
+          <div class="teaching-staff--title">
+            Early Years Foundation Stage (EYFS) Teachers
+          </div>
+        </div>
+
+        <div id="kindergarten3" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/eyfs/Lauren-Mutmear.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Lauren Mutmear<br>
+              <span class="info">
+                Kindergarten 3<br>
+                EYFS Coordinator
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="preschoolA1" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/eyfs/Colleen-Spievak.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Colleen Spievak<br>
+              <span class="info">
+                Preschool A/1
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="preschoolA2" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/eyfs/Krista-Alessandri.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Krista Alessandri<br>
+              <span class="info">
+                Preschool A/2
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="preschoolB1" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/eyfs/Daria-Bredow.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Daria Bredow<br>
+              <span class="info">
+                Preschool B/1
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="preschoolB2" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/eyfs/Jessica-Casarotte.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Jessica Casarotte<br>
+              <span class="info">
+                Preschool B/2
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="kindergarten1" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/eyfs/Edward-Emmett.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Edward Emmett<br>
+              <span class="info">
+                Kindergarten 1
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="kindergarten2" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/eyfs/Ewan-Walkinshaw.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Ewan Walkinshaw<br>
+              <span class="info">
+                Kindergarten 2
+              </span>
+            </div>
+          </div>
+        </div>
+        <!-- End of EYFS Teachers -->
+
+        <!-- KS1 Teachers -->
+        <div class="teaching-staff">
+          <div class="teaching-staff--title">
+            Primary School (Key Stage 1) Teachers
+          </div>
+        </div>
+
+        <div id="year2class1" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/ks1/Gregg-Sangster.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Gregg Sangster<br>
+              <span class="info">
+                Year 2/1<br>
+                Key Stage 1 Coordinator
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="year1class1" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/ks1/Kameren-Lund.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Kameren Lund<br>
+              <span class="info">
+                Year 1/1
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="year1class2" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/ks1/Ayesha-Rahman.jpg" alt="">
+            <div class="orgchart__textbox--name">
+            Ayesha Rahman<br>
+              <span class="info">
+            Year 1/2
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="year1class3" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            Year 1/3
+          </div>
+          <div class="orgchart__textbox--name">
+            Richard
+          </div>
+        </div>
+
+        <div id="year2class2" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            Year 2/2
+          </div>
+          <div class="orgchart__textbox--name">
+            Mark L.
+          </div>
+        </div>
+
+        <div id="year2class3" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            Year 2/3
+          </div>
+          <div class="orgchart__textbox--name">
+            Matt Sellers
+          </div>
+        </div>
+
+        <div id="year3class1" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            Year 3/1
+          </div>
+          <div class="orgchart__textbox--name">
+            Robert Cable
+          </div>
+        </div>
+
+        <div id="year3class2" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/ks2/Duncan-Emmott.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Duncan Emmott<br>
+              <span class="info">
+                Year 3/2
+              </span>
+            </div>
+          </div>
+        </div>
+        <!-- End of KS1 Teachers -->
+
+        <!-- KS2 Teachers -->
+        <div class="teaching-staff">
+          <div class="teaching-staff--title">
+            Primary School (Key Stage 2) Teachers
+          </div>
+        </div>
+
+        <div id="year6class2" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            Year 6/2<br>
+            Key Stage 2 Coordinator
+          </div>
+          <div class="orgchart__textbox--name">
+            Mark Polson
+          </div>
+        </div>
+
+        <div id="year4class1" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            Year 4/1
+          </div>
+          <div class="orgchart__textbox--name">
+            Anthony Kelly
+          </div>
+        </div>
+
+        <div id="year4class2" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            Year 4/2
+          </div>
+          <div class="orgchart__textbox--name">
+            Rob
+          </div>
+        </div>
+        <!-- End of KS2 Teachers -->
+
+      </div>
+    </div>
+    <!-- End of Organizational Chart 2018 - 2019 -->
+
     <div class="three-links">
       <div class="container flex-links">
         <a href="#">Enquire</a>
