adding org chart (wip)

--- a/our-team/index.html
+++ b/our-team/index.html
@@ -333,9 +333,9 @@
           <div class="orgchart__textbox--position">
             <img src="../img/org chart/ks1/Ayesha-Rahman.jpg" alt="">
             <div class="orgchart__textbox--name">
-            Ayesha Rahman<br>
+              Ayesha Rahman<br>
               <span class="info">
-            Year 1/2
+                Year 1/2
               </span>
             </div>
           </div>
@@ -343,47 +343,47 @@
 
         <div id="year1class3" class="orgchart__textbox">
           <div class="orgchart__textbox--position">
-            Year 1/3
-          </div>
-          <div class="orgchart__textbox--name">
-            Richard
+            <img src="../img/org chart/ks1/Richard-Roberts.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Richard<br>
+              <span class="info">
+                Year 1/3
+              </span>
+            </div>
           </div>
         </div>
 
         <div id="year2class2" class="orgchart__textbox">
           <div class="orgchart__textbox--position">
-            Year 2/2
-          </div>
-          <div class="orgchart__textbox--name">
-            Mark L.
+            <img src="../img/org chart/ks1/Mark-Lloyd.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Mark L.<br>
+              <span class="info">
+                Year 2/2
+              </span>
+            </div>
           </div>
         </div>
 
         <div id="year2class3" class="orgchart__textbox">
           <div class="orgchart__textbox--position">
-            Year 2/3
-          </div>
-          <div class="orgchart__textbox--name">
-            Matt Sellers
+            <img src="../img/org chart/ks1/Matthew-Sellers.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Matthew Sellers<br>
+              <span class="info">
+                Year 2/3
+              </span>
+            </div>
           </div>
         </div>
 
         <div id="year3class1" class="orgchart__textbox">
           <div class="orgchart__textbox--position">
-            Year 3/1
-          </div>
-          <div class="orgchart__textbox--name">
-            Robert Cable
-          </div>
-        </div>
-
-        <div id="year3class2" class="orgchart__textbox">
-          <div class="orgchart__textbox--position">
-            <img src="../img/org chart/ks2/Duncan-Emmott.jpg" alt="">
+            <img src="../img/org chart/ks1/Robert-Woodhead.jpg" alt="">
             <div class="orgchart__textbox--name">
-              Duncan Emmott<br>
+              Robert Woodhead<br>
               <span class="info">
-                Year 3/2
+                Year 3/1
               </span>
             </div>
           </div>
@@ -397,34 +397,180 @@
           </div>
         </div>
 
-        <div id="year6class2" class="orgchart__textbox">
+        <div id="year3class2" class="orgchart__textbox">
           <div class="orgchart__textbox--position">
-            Year 6/2<br>
-            Key Stage 2 Coordinator
-          </div>
-          <div class="orgchart__textbox--name">
-            Mark Polson
+            <img src="../img/org chart/ks2/Duncan-Emmott.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Duncan Emmott<br>
+              <span class="info">
+                Year 3/2<br>
+                Key Stage 2 Coordinator
+              </span>
+            </div>
           </div>
         </div>
 
         <div id="year4class1" class="orgchart__textbox">
           <div class="orgchart__textbox--position">
-            Year 4/1
-          </div>
-          <div class="orgchart__textbox--name">
-            Anthony Kelly
+            <img src="../img/org chart/ks2/Anthony-Kelly.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Anthony Kelly<br>
+              <span class="info">
+                Year 4/1
+              </span>
+            </div>
           </div>
         </div>
 
         <div id="year4class2" class="orgchart__textbox">
           <div class="orgchart__textbox--position">
-            Year 4/2
+            <img src="../img/org chart/ks2/Robert-Cable.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Robert Cable<br>
+              <span class="info">
+                Year 4/2
+              </span>
+            </div>
           </div>
-          <div class="orgchart__textbox--name">
-            Rob
+        </div>
+
+        <div id="year5class1" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/ks2/Michael-Jacobson.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Michael Jacobson<br>
+              <span class="info">
+                Year 5/1
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="year5class2" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/ks2/Danielle-Cope.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Danielle Cope<br>
+              <span class="info">
+                Year 5/2
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="year6class1" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/ks2/Justin-Senior.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Justin Senior<br>
+              <span class="info">
+                Year 6/1
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="year6class2" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/ks2/Mark-Polson.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Mark Polson<br>
+              <span class="info">
+                Year 6/2
+              </span>
+            </div>
           </div>
         </div>
         <!-- End of KS2 Teachers -->
+
+        <!-- KS3 Teachers -->
+        <div class="teaching-staff">
+          <div class="teaching-staff--title">
+            Secondary School (Key Stage 3) Teachers
+          </div>
+        </div>
+
+        <div id="year7class1" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/ks3/Timothy-Swihart.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Timothy Swihart<br>
+              <span class="info">
+                Year 7/1<br>
+                Key Stage 3 Coordinator
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="year7class2" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/ks3/Patrick-Flood.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Patrick Flood<br>
+              <span class="info">
+                Year 7/2
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="year8" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/ks3/Christopher-Fung.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Christopher Fung<br>
+              <span class="info">
+                Year 8
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="year9" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/ks3/Matthew-Coutts.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Matthew Coutts<br>
+              <span class="info">
+                Year 9
+              </span>
+            </div>
+          </div>
+        </div>
+        <!-- End of KS3 Teachers -->
+
+        <!-- KS4 Teachers -->
+        <div class="teaching-staff">
+          <div class="teaching-staff--title">
+            Secondary School (Key Stage 4) Teachers
+          </div>
+        </div>
+
+        <div id="year10" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/ks4/Barry-Arnold.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Barry Arnold<br>
+              <span class="info">
+                Year 10
+              </span>
+            </div>
+          </div>
+        </div>
+        
+        <div id="year11" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/ks4/Jeannette-Willcock.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Jeannette Willcock<br>
+              <span class="info">
+                Year 11
+              </span>
+            </div>
+          </div>
+        </div>
+        <!-- End of KS4 Teachers -->
 
       </div>
     </div>
